--- a/src/main/resources/templates/admin/adminCardApplication.html
+++ b/src/main/resources/templates/admin/adminCardApplication.html
@@ -6,7 +6,7 @@
     <title>Admin - Applications Management</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/adminApplicationPage.css">
+    <link rel="stylesheet" href="../../static/css/adminApplicationPage.css">
 </head>
 <body>
 <div class="container-fluid">
