--- a/src/main/resources/templates/userDetails.html
+++ b/src/main/resources/templates/userDetails.html
@@ -6,7 +6,7 @@
     <title>Admin - User Details</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/adminUserDetails.css">
+    <link rel="stylesheet" href="../static/css/adminUserDetails.css">
 </head>
 <body>
 <div class="container-fluid">
